2000-04-03  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10465: Src/Zle/computil.c: fix for completion of options
	after option with rest-arguments

	* 10463: Src/builtin.c, Src/params.c, Src/zsh.h: PM_HASHELEM
	flag to keep association elements from being exported with
	ALL_EXPORT set

	* 10459: Completion/Commands/_next_tags, Doc/Zsh/compwid.yo,
	Src/Zle/compcore.c: _next_tags should be usable with menu-
	completion

	* 10456: Src/Zle/compcore.c: Copy QIPREFIX/QISUFFIX.

2000-04-04  Andrew Main  <zefram@zsh.org>

	* 10444: Src/lex.c, Src/pattern.c: Insist on proper syntax
	for numeric globbing (with the "-").  Also fix the bug whereby
	"echo 1<2-3>" would lose the "1".

2000-04-03  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10408: Completion/Core/_path_files: better quoting

	* 10409: Completion/Core/_path_files: completion after ~+<num>

	* 10412: Src/Zle/compmatch.c: better partial word completion for
 	new parts

	* 10413: Completion/Commands/_complete_help, Doc/Zsh/compsys.yo:
	style list optional in _complete_help

	* 10416: Completion/Core/_main_complete, Doc/Zsh/compsys.yo:
 	default completer style contains _ignored

	* 10425: Completion/Core/_files, Completion/User/_gdb,
	Completion/User/_getconf, Completion/User/_mh,
	Completion/User/_netscape, Completion/User/_tiff,
	Completion/User/_urls, Completion/X/_xmodmap,
	Doc/Zsh/compsys.yo, Src/Zle/computil.c: Various completion fixes.

2000-04-02  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* pws: Config/version.mk: 3.1.6-dev-21.

2000-04-01  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* pws: 10376: LICENCE: new file, with licence as it appears
	in some (but not all) files in distribution.

	* Bart: 10372: Doc/Zsh/builtins.yo, Doc/Zsh/mod_zutil.yo:
	cross-reference builtin descriptions in modules.

	* Chmouel: 10370: zsh-3.1.6-dev-20/Completion/Linux/_rpm: rpm -p
	handling.

	* Bart: 10368: Doc/Zsh/mod_zle.yo: improved bindkey -R description.
